# MTVCrafter

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  dataset.py  draw_pose.py  fetch_data.sh  infer.py  infer_17b.py  infer_7b.py  page.html  process_nlf.py  pyproject.toml  requirements.txt  train_vqvae.py  wan_lora.py
data/: sample_data.pkl  sampled_data.pkl  statistics.pkl
models/: __init__.py
models/dit/: __init__.py  mvdit_transformer.py  mvdit_transformer_17b.py  mvdit_transformer_7b.py  pipeline_mtvcrafter.py  pipeline_mtvcrafter_17b.py  pipeline_mtvcrafter_7b.py  wan_text_encoder.py
models/motion4d/: vqvae.py
mtvcrafter/: dataset.py  wan_lora.py
mtvcrafter/models/dit/: __init__.py  pipeline_mtvcrafter_17b.py  wan_image_encoder.py  wan_vae.py
mtvcrafter/models/motion4d/: __init__.py  vqvae.py
mtvcrafter/wan2.1/: wan_civitai.yaml
scripts/: draw_pose.py  infer_17b.py  infer_7b.py  process_nlf.py  train_vqvae.py
