[project]
name = "mtvcrafter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "accelerate==1.6.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "decorator==4.4.2",
    "diffusers==0.33.1",
    "einops==0.8.1",
    "eva-decord==0.6.1",
    "filelock==3.18.0",
    "fsspec==2025.3.2",
    "hf-xet==1.1.0",
    "huggingface-hub==0.31.1",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "importlib-metadata==8.7.0",
    "jinja2==3.1.6",
    "loguru>=0.7.3",
    "markupsafe==3.0.2",
    "moviepy==1.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.5",
    "omegaconf>=2.3.0",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pillow==11.2.1",
    "proglog==0.1.12",
    "psutil==7.0.0",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.5.3",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
    "transformers>=4.53.3",
    "typing-extensions==4.13.2",
    "tyro>=0.9.26",
    "urllib3==2.4.0",
    "zipp==3.21.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
